Bug 45522 - Crash when copying table between Writer and other LibreOffice programs
Summary: Crash when copying table between Writer and other LibreOffice programs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.5 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:3.6.0 target:3.5.5
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-02-01 18:11 UTC by Ash Kyd
Modified: 2015-12-17 11:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Copying this table into another LibreOffice app will crash. (11.37 KB, application/vnd.oasis.opendocument.text)
2012-02-01 18:11 UTC, Ash Kyd
Details
avoid the first crash, but will still crash later on (1.44 KB, patch)
2012-03-21 08:31 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ash Kyd 2012-02-01 18:11:02 UTC
Created attachment 56487 [details]
Copying this table into another LibreOffice app will crash.

LibreOffice consistently crashes when attempting to copy and paste certain tables from a Writer document to other LibreOffice applications, such as Impress, Calc, or Draw. Pasting the table into another LibreOffice document works fine.

I have tried removing the content, styles, backgrounds etc from the table, but even so it still crashes LibreOffice. I have attached a document which will reproduce the problem.

Steps to reproduce: 
1. Open attached document.
2. Select the entire table.
3. Copy the table using ctrl+c.
4. Open a new Calc document (or Impress, Draw)
5. Paste the table into the new document with ctrl+v.

Expected: The table should copy into the new document.
Actual: LibreOffice crashes and closes both the source and destination document.

I have tried this on LibreOffice 3.4.5 on Linux, and LibreOffice 3.4.4 on Windows. Both exhibit the same issue.
Comment 1 Josef.Latt 2012-02-02 02:00:41 UTC
Think the reason are the merged cells.
Comment 2 Boostland 2012-02-02 14:33:14 UTC
This also happens on 3.5 RC2 Windows
Comment 3 Caolán McNamara 2012-03-20 07:20:09 UTC
indeed, reproducible
Comment 4 Caolán McNamara 2012-03-20 08:42:53 UTC
I suspect that the problem is that the rtf export depends on the layout information of the exported table, but that the clipboard document doesn't generate any, something of that nature
Comment 5 Caolán McNamara 2012-03-21 08:31:59 UTC
Created attachment 58823 [details]
avoid the first crash, but will still crash later on
Comment 6 Not Assigned 2012-03-21 09:20:27 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c3dd5af41bc801ee6023513399c01c632dc7779

fdo#45522: WW8TableInfo::processSwTable: check that table has layout
Comment 7 Not Assigned 2012-03-21 09:31:50 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea92fb2b82a050c24a72c55a484163b07263ab4c&g=libreoffice-3-5

fdo#45522: WW8TableInfo::processSwTable: check that table has layout


It will be available in LibreOffice 3.5.3.
Comment 8 Rainer Bielefeld Retired 2012-03-24 09:52:37 UTC
Fix is in 3.5, 3.6, there will be no 3.4.7, so I closed tis one. Please feel free to reopen if I did wrong.
Comment 9 Not Assigned 2012-03-26 08:14:33 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c646eaa216842443bb9bf88caf22f1805006dcc9&g=libreoffice-3-5-2

fdo#45522: WW8TableInfo::processSwTable: check that table has layout


It will be available already in LibreOffice 3.5.2.
Comment 10 Michael Stahl (allotropia) 2012-04-04 07:54:22 UTC
according to Caolan this still crashes in a different place now.

the bugdoc likely contains an old-style subtable-based table;
this is a regression from using the new RTF export filter in OOo/LO 3.4.
Comment 11 Not Assigned 2012-05-11 07:31:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f506ca0fee6114210d41c9c4a5f7eff5f5666d02

fdo#45522 fix crash on RTF export of sub-tables during copy&paste
Comment 12 Miklos Vajna 2012-05-11 07:34:22 UTC
Hi Ash,

Resolved in master, marking as such.

Thanks for the report,

Miklos
Comment 13 Not Assigned 2012-06-01 07:28:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=82b89ae452de7c373d00a5caede2a551c89805d2&g=libreoffice-3-5

fdo#45522 fix crash on RTF export of sub-tables during copy&paste


It will be available in LibreOffice 3.5.5.
Comment 14 Robinson Tryon (qubit) 2015-12-17 11:53:53 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]