fdo#45522: WW8TableInfo::processSwTable: check that table has layout